# expenses-app-django

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
caddy/: Caddyfile
deployment/: 50-dailyreese-env.conf  50-splootwyze-env.conf  Caddyfile.local  Caddyfile.prod  dailyreese.socket  manifest.json  splootwyze.service  vault_pass.txt  vps.yml
expenses/: admin.py  forms.py  models.py  urls.py  views.py
expenses/migrations/: 0001_initial.py  0002_remove_expense_description.py  0002_user_created_at_user_updated_at_and_more.py  0003_alter_expense_description.py  0003_expense_receipt_photo.py  0004_alter_expense_description.py  0004_alter_expense_receipt_photo.py  0005_delete_payment.py  0005_payment.py  0006_expense_group.py  0007_alter_expense_group_alter_expense_payer_and_more.py  0008_alter_expense_options_alter_expense_group.py
expenses/templates/: 400.html  404.html  all_expenses.html  all_users.html  basic_list.html  details.html  expense_delete.html  expense_details.html  expense_edit.html  expense_form.html  expense_form_with_id.html  expense_submit.html  expense_table.html  group_expenses.html  login.html  main.html  master.html  submit_form.html  testing.html  user_details.html
mystaticfiles/: global.css
splitwyze/: asgi.py  settings.py  urls.py  wsgi.py
splootwyze/: asgi.py  settings.py  urls.py  wsgi.py
splootwyze/fixtures/: init.json  initial-expenses.json  initial-users.json
staticfiles/: site.webmanifest
