[tool.poetry]
name = "expenses-app-python"
version = "0.1.0"
description = ""
authors = ["AJ Collins <16407457+ajc133@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
