[tool.poetry]
name = "expenses-app-python"
version = "0.1.0"
description = ""
authors = ["AJ Collins <16407457+ajc133@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
whitenoise = "^6.6.0"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
pylsp-mypy = "^0.6.8"
python-lsp-black = "^2.0.0"
django-stubs = {extras = ["compatible-mypy"], version = "^5.0.2"}
flake8 = "^7.1.0"
pre-commit = "^3.7.1"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "splootwyze.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
