[project]
name = "expenses-app-django"
version = "1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "django-storages[s3]>=1.14.5",
    "gunicorn>=23.0.0",
    "whitenoise>=6.9.0",
]

[project.scripts]
manage = "manage:main"

[tool.django-stubs]
django_settings_module = "splootwyze.settings"

[dependency-groups]
dev = [
    "datasette>=0.65.1",
]
